<resources>
    <string name="app_name">QuickQR</string>
    <string name="upper">UPPERCASE TEXT</string>
    <string name="lower">LOWERCASE TEXT</string>
    <string name="enter_content">Enter Content</string>
    <string name="enter_name_optional">Enter Name</string>
    <string name="enter_your_text">Enter Your Text</string>
    <string name="generate_qrcode">GENERATE QRCODE</string>
    <string name="contentDes">TODO</string>
    <string name="scan">SCAN</string>
    <string name="share">SHARE</string>
    <string name="save">SAVE</string>
    <string name="letter_count">0/2950</string>
    <string name="qr_tolltip">YOUR GENERATED QR CODE WILL BE DISPLAY HERE.</string>
    <string name="setting">SETTINGS</string>
    <string name="scanned_results_text">SCANNED RESULTS WILL BE DISPLAY HERE</string>
    <string name="scan_result_title">Scan Result:</string>
    <string name="copy_content">COPY CONTENT</string>
    <string name="view">VIEW</string>
    <string name="history">HISTORY</string>
    <string name="url_detected">URL DETECTED:</string>
    <string name="url_content">URL Content: </string>
    <string name="browse">BROWSE</string>
    <string name="settings_title">SETTINGS</string>
    <string name="appearence">Appearence</string>
    <string name="change_theme_color_des">Change application theme color</string>
</resources>