<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_app_name"
        android:padding="10dp"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/contentDes"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_result_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/scannedResultTitle"
        android:layout_below="@+id/top_app_name"
        android:textAllCaps="true"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultCardView"
        app:cardBackgroundColor="@color/card_background_color"
        android:layout_below="@+id/scannedResultTitle"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/card_background_color"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="15sp"
                android:id="@+id/scannedResultTV"
                android:maxLines="20"
                android:gravity="left"
                android:text="@string/scanned_results_text"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:id="@+id/copyContentLayout"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_below="@+id/resultCardView">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copyContentBtn"
            android:text="@string/copy_content"
            android:tooltipText="@string/copy_content"
            android:backgroundTint="@color/btn_bg"
            android:textStyle="bold"
            android:drawableStart="@drawable/document_copy_svgrepo_com"
            android:drawablePadding="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginHorizontal="35dp"
        android:layout_marginVertical="18dp"
        android:id="@+id/urlSection"
        android:layout_below="@+id/copyContentLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/url_detected"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/urlTitleTV"
                android:textSize="15sp"
                android:text="@string/url_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:id="@+id/urlTV"
                android:textSize="15sp"
                android:textColor="@color/text_color_grey"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/browseUrlButton"
            android:backgroundTint="@color/btn_bg"
            android:text="@string/browse"
            android:tooltipText="@string/browse"
            android:textStyle="bold"
            android:drawableStart="@drawable/route_square_svgrepo_com_24"
            android:drawablePadding="5dp"/>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createQR"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="35dp"
        android:contentDescription="@string/contentDes"
        app:backgroundTint="@color/quantum_orange400"
        android:src="@drawable/category_svgrepo_com"
        app:tint="@null"
        android:layout_marginVertical="240dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scanQRC"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="35dp"
        android:contentDescription="@string/contentDes"
        app:backgroundTint="@color/quantum_orange400"
        android:src="@drawable/scan_svgrepo_new_img"
        app:tint="@null"
        android:layout_marginVertical="170dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/plusButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="35dp"
        android:contentDescription="@string/contentDes"
        app:backgroundTint="@color/quantum_orange400"
        android:src="@drawable/plus_large_svgrepo_com"
        app:tint="@null"
        android:layout_marginVertical="100dp"/>
</RelativeLayout>