<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_app_name"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/contentDes"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCustombtn"
        android:layout_below="@+id/top_app_name">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/uppercase"
                android:layout_width="0dp"
                android:tooltipText="@string/upper"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:layout_marginHorizontal="1dp"
                android:contentDescription="@string/contentDes"
                android:padding="0dp"
                android:src="@drawable/uppercase_icon"
                android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
                app:tint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="|"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/lowercase"
                android:layout_width="0dp"
                android:tooltipText="@string/lower"
                android:layout_weight="1.5"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:contentDescription="@string/contentDes"
                android:padding="0dp"
                android:src="@drawable/lowercase_icon"
                android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
                app:tint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="|"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/clearAllText"
                android:layout_width="0dp"
                android:tooltipText="CLEAR TEXT"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="1dp"
                android:contentDescription="@string/contentDes"
                android:padding="0dp"
                android:src="@drawable/keyboard_backspace_30dp"
                android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
                app:tint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textCustombtn"
        android:layout_above="@+id/bottomControls"
        android:layout_marginTop="2dp"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarFadeDuration="5000"
                    android:scrollbars="vertical"
                    android:gravity="top|start"
                    android:hint="@string/enter_your_text"
                    android:maxLines="20"
                    android:minLines="10"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:paddingVertical="5dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/letter_count"
                    android:id="@+id/letterCount"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/qrCodename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                app:endIconMode="clear_text"
                app:endIconDrawable="@drawable/close_circle_svgrepo_com"
                app:startIconDrawable="@drawable/edit_2_svgrepo_com"
                app:startIconTint="@color/my_light_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/qrName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name_optional"
                    android:maxLines="1"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/generateBtn"
                android:layout_width="match_parent"
                android:tooltipText="GENERATE QR CODE"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/generate_qrcode"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                tools:ignore="VisualLintButtonSize" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="15dp"
                app:cardElevation="1dp"
                app:cardBackgroundColor="@color/white">

                <ImageView
                    android:id="@+id/qrImage"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/contentDes"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/qr_code_anim1"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:lineHeight="20dp"
                    android:text="@string/qr_tolltip"
                    android:visibility="visible" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:tooltipText="SCAN QR"
        android:contentDescription="@string/contentDes"
        android:src="@drawable/scan_svgrepo_com_new"
        android:id="@+id/floatActionBtn"
        android:layout_above="@+id/bottomControls">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomControls"
        android:background="@drawable/bottom_background"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="NotSibling">

        <LinearLayout
            android:id="@+id/share_qr"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginVertical="5dp"
                android:contentDescription="@string/contentDes"
                android:src="@drawable/route_square_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/share"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingApp"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginVertical="5dp"
                android:contentDescription="@string/contentDes"
                android:src="@drawable/setting_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/setting"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_img"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginVertical="5dp"
                android:contentDescription="@string/contentDes"
                android:src="@drawable/gallery_import_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/save"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>