<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_app_name"
        android:padding="10dp"
        android:background="@drawable/header_background"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/contentDes"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="25dp"
        android:id="@+id/settingTitle"
        android:layout_below="@+id/top_app_name"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appearenceTitle"
        android:gravity="center_vertical"
        android:layout_below="@+id/settingTitle"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/contentDes"
            android:src="@drawable/color_swatch_svgrepo_com"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearence"
            android:layout_marginHorizontal="5dp"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/changeThemeDescription"
        android:gravity="center_vertical"
        android:layout_below="@+id/appearenceTitle"
        android:layout_marginHorizontal="70dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_theme_color_des"
            android:layout_marginHorizontal="0dp"
            android:textSize="16sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="5dp"
        android:id="@+id/themeButton"
        android:layout_below="@+id/changeThemeDescription">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/color_filter_svgrepo_com_green"
            app:civ_border_color="#8BC34A"
            app:civ_circle_color="@color/white"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            android:id="@+id/button_green"
            app:civ_shadow_radius="1dp"
            app:civ_shadow_color="#8BC34A"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/color_filter_svgrepo_com_gold"
            app:civ_border_color="#ffffa726"
            app:civ_circle_color="#222222"
            android:layout_marginHorizontal="10dp"
            app:civ_border_width="1dp"
            app:civ_shadow="true"
            android:id="@+id/button_gold"
            app:civ_shadow_radius="0dp"
            app:civ_shadow_color="#3f51b5"/>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="8dp"
        app:dividerThickness="2dp"
        app:dividerColor="#6B6B6B"
        android:id="@+id/divider1"
        android:layout_below="@+id/themeButton"/>
</RelativeLayout>